fix coffee section overflow

--- a/public/scss/base/typography.scss
+++ b/public/scss/base/typography.scss
@@ -7,7 +7,8 @@
 
 h1 {
     font-size: 4rem;
-    letter-spacing: 4px;
+    letter-spacing: 2px;
+    font-weight: 600;
 }
 
 h2 {
@@ -22,18 +23,8 @@ h3 {
 p {
     font-size: 1rem;
 }
-// ------------------------------specific element styling------------------------------
-
-// ------------------landing page------------------
-#landing-page {
-    h1 {
-        font-size: 6rem;
-    }
-
-}
 
 // ------------------overview page------------------
-
 .stat-item{
     p {
         font-size: 1.2rem;
