--- a/public/scss/components/chips.scss
+++ b/public/scss/components/chips.scss
@@ -1,8 +1,9 @@
 .chips {
     border: 1px solid white;
-    min-width: 72px;
+    min-width: 64px;
     padding: 2px 8px;
     display: inline-block;
     border-radius: 200px;
     text-align: center;
+    font-size: 12px;
 }
