--- a/public/scss/layout/grid.scss
+++ b/public/scss/layout/grid.scss
@@ -1,5 +1,6 @@
 // ---------------------------basic layout section grid---------------------------
 .grid-container {
+    max-height: 100vh;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 6fr 1fr;
