--- a/public/scss/pages/hero-section.scss
+++ b/public/scss/pages/hero-section.scss
@@ -3,6 +3,7 @@
     width: 100vw;
     display: flex;
     h1 {
+        font-size: 6rem;
         margin: auto 0;
         line-height: 1;
         padding: 2%;
